--- a/index-law.html
+++ b/index-law.html
@@ -13,9 +13,9 @@
 
     <style>
     .carousel-item img {
-    width: 100%;  /* Sayfanın tam genişliği kadar */
-    height: 400px; /* Boyunu kısalt */
-    object-fit: cover; /* Resmi kırpmadan ölçeklendir */}
+    width: 100%;  
+    height: 400px; 
+    object-fit: cover; }
 
     
 
