--- a/Aboutus.html
+++ b/Aboutus.html
@@ -14,9 +14,9 @@
 
     <style>
     .carousel-item img {
-    width: 100%;  /* Sayfanın tam genişliği kadar */
-    height:100%; /* Boyunu kısalt */
-    object-fit: cover; /* Resmi kırpmadan ölçeklendir */
+    width: 100%;  
+    height:100%; 
+    object-fit: cover; 
 }
 
      
